--- a/templates/index.html
+++ b/templates/index.html
@@ -181,9 +181,9 @@
       </div>
     </div>
   </fieldset>
-  <div>
+  <div><br>
     <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="btn btn-primary">Test</button>
     </div>
   </div>
 </form>
