--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       <legend>Estuvo en alguna zona denominada zona de riesgo?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="zona" id="zona1" value="1">
+          <input class="form-check-input" type="radio" name="zona" id="zona1" value="1" checked>
           <label class="form-check-label" for="zona1">
             Si
           </label>
@@ -53,7 +53,7 @@
       <legend>Estuvo en contacto con alguna persona con COVID19?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="contacto" id="contacto1" value="1">
+          <input class="form-check-input" type="radio" name="contacto" id="contacto1" value="1" checked>
           <label class="form-check-label" for="contacto1">
             Si
           </label>
@@ -72,7 +72,7 @@
       <legend>Tiene cansancio o dolor corporal?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="cansancio" id="can1" value="1">
+          <input class="form-check-input" type="radio" name="cansancio" id="can1" value="1" checked>
           <label class="form-check-label" for="can1">
             Si
           </label>
@@ -91,7 +91,7 @@
       <legend>Ha tenido una repentina perdida del olfato?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="perOlf" id="perOlf1" value="1">
+          <input class="form-check-input" type="radio" name="perOlf" id="perOlf1" value="1" checked>
           <label class="form-check-label" for="perOlf1">
             Si
           </label>
@@ -110,7 +110,7 @@
         <legend>Ha tenido una repentina perdida del gusto?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="perGus" id="perGus1" value="1">
+          <input class="form-check-input" type="radio" name="perGus" id="perGus1" value="1" checked>
           <label class="form-check-label" for="perGus1">
             Si
           </label>
@@ -129,7 +129,7 @@
         <legend>Tiene tos o dolor de garganta?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="tos" id="tos1" value="1">
+          <input class="form-check-input" type="radio" name="tos" id="tos1" value="1" checked>
           <label class="form-check-label" for="tos1">
             Si
           </label>
@@ -148,7 +148,7 @@
         <legend>Tiene dificultad respiratoria?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="difRes" id="difRes1" value="1">
+          <input class="form-check-input" type="radio" name="difRes" id="difRes1" value="1" checked>
           <label class="form-check-label" for="difRes1">
             Si
           </label>
@@ -167,7 +167,7 @@
         <legend>Es usted un denominado paciente de riesgo (+65, inmunodepresión o enfermedades crónicas cardíacas, pulmonares, renales, hepáticas, sanguíneas o metabólicas, embarazadas)?</legend>
       <div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="pacRiesgo" id="pacRiesgo1" value="1">
+          <input class="form-check-input" type="radio" name="pacRiesgo" id="pacRiesgo1" value="1" checked>
           <label class="form-check-label" for="pacRiesgo1">
             Si
           </label>
