--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,8 @@
     Paciente de Riesgo: {{dic['Situacion de Riesgo']}}<br>
 </div>
   {% endif %}
+  <br>
+  <br>
 <form action="/test" method="POST">
   <fieldset>
     <div class="form-group row">
@@ -48,6 +50,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
   <fieldset>
     <div>
       <legend>Estuvo en contacto con alguna persona con COVID19?</legend>
@@ -67,6 +70,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
   <fieldset>
     <div>
       <legend>Tiene cansancio o dolor corporal?</legend>
@@ -86,6 +90,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
     <fieldset>
     <div>
       <legend>Ha tenido una repentina perdida del olfato?</legend>
@@ -105,6 +110,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
   <fieldset>
   <div>
         <legend>Ha tenido una repentina perdida del gusto?</legend>
@@ -124,6 +130,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
     <fieldset>
     <div>
         <legend>Tiene tos o dolor de garganta?</legend>
@@ -143,6 +150,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
   <fieldset>
   <div>
         <legend>Tiene dificultad respiratoria?</legend>
@@ -162,6 +170,7 @@
       </div>
     </div>
   </fieldset>
+  <br>
     <fieldset>
     <div>
         <legend>Es usted un denominado paciente de riesgo (+65, inmunodepresión o enfermedades crónicas cardíacas, pulmonares, renales, hepáticas, sanguíneas o metabólicas, embarazadas)?</legend>
@@ -181,7 +190,8 @@
       </div>
     </div>
   </fieldset>
-  <div><br>
+  <br>
+  <div>
     <div class="col-sm-10">
       <button type="submit" class="btn btn-primary">Test</button>
     </div>
