--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <h1>Autotest Covid19</h1>
   {% if dic: %}
   <div class="alert alert-success" role="alert">
-  <strong>Reultado del test: {{dic['Clasificacion']}}</strong><br>
+  <strong>Reultado del test: {{dic['Temperatura']}}</strong><br>
     Datos Ingresados:<br>
     Temperatura : {{dic['Clasificacion']}}<br>
     Zona de riesgo: {{dic['Zona de riesgo']}}<br>
