--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 <h1>Autotest Covid19</h1>
   {% if dic: %}
   <div class="alert alert-success" role="alert">
-  <strong>Reultado del test: {{dic['Temperatura']}}</strong><br>
+  <strong>Reultado del test: {{dic['Clasificacion']}}</strong><br>
     Datos Ingresados:<br>
-    Temperatura : {{dic['Clasificacion']}}<br>
+    Temperatura : {{dic['Temperatura']}}<br>
     Zona de riesgo: {{dic['Zona de riesgo']}}<br>
     Contacto con Algun enfermo: {{dic['Contacto con Algun enfermo']}}<br>
     Cansancio: {{dic['Cansancio']}}<br>
